@@ -19,6 +19,7 @@
 package org.apache.kylin.query;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -26,6 +27,7 @@ import java.util.Properties;
 
 import org.apache.calcite.jdbc.Driver;
 import org.apache.kylin.common.KylinConfig;
+import org.apache.kylin.common.debug.BackdoorToggles;
 import org.apache.kylin.query.schema.OLAPSchemaFactory;
 
 public class QueryConnection {
@@ -37,9 +39,9 @@ public class QueryConnection {
             try {
                 Class<?> aClass = Thread.currentThread().getContextClassLoader()
                         .loadClass("org.apache.calcite.jdbc.Driver");
-                Driver o = (Driver) aClass.newInstance();
+                Driver o = (Driver) aClass.getDeclaredConstructor().newInstance();
                 DriverManager.registerDriver(o);
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 e.printStackTrace();
             }
             isRegister = true;
@@ -47,6 +49,8 @@ public class QueryConnection {
         File olapTmp = OLAPSchemaFactory.createTempOLAPJson(project, KylinConfig.getInstanceFromEnv());
         Properties info = new Properties();
         info.putAll(KylinConfig.getInstanceFromEnv().getCalciteExtrasProperties());
+        // Import calcite props from jdbc client(override the kylin.properties)
+        info.putAll(BackdoorToggles.getJdbcDriverClientCalciteProps());
         info.put("model", olapTmp.getAbsolutePath());
         info.put("typeSystem", "org.apache.kylin.query.calcite.KylinRelDataTypeSystem");
         return DriverManager.getConnection("jdbc:calcite:", info);
